# API-FORGE

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  .tool-versions  CONTRIBUTING.md  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/backend/: Dockerfile  nest-cli.json  package.json  tsconfig.json  vitest.config.ts
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/common/decorators/: current-user.decorator.ts
apps/backend/src/common/filters/: problem-details.filter.ts
apps/backend/src/common/guards/: jwt-auth.guard.ts
apps/backend/src/config/: config.schema.ts
apps/backend/src/modules/audit/: audit.service.ts
apps/backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  email.service.ts
apps/backend/src/modules/cerbos/: cerbos.constants.ts  cerbos.module.ts
apps/backend/src/modules/endpoints/: endpoints.controller.ts  endpoints.service.ts
apps/backend/src/modules/environments/: environments.controller.ts  environments.service.ts
apps/backend/src/modules/generator/: generator.controller.ts  generator.module.ts  generator.service.ts
apps/backend/src/modules/git/: branches.service.ts  commits.service.ts  git.controller.ts  git.module.ts  (+1 more)
apps/backend/src/types/: y-websocket.d.ts
apps/backend/test/: auth.e2e-spec.ts
apps/cli/: go.mod  go.sum  main.go  openapi.yaml
apps/cli/.apiforge/: config.yaml
apps/cli/cmd/: diff.go  helpers.go  init.go  lint.go  login.go  mr.go  pull.go  push.go  root.go  whoami.go
apps/cli/internal/client/: client.go
apps/cli/internal/config/: config.go
apps/generator/: Cargo.toml
apps/generator/crates/emitter-go/: Cargo.toml
apps/generator/crates/emitter-go/src/: lib.rs
apps/generator/crates/emitter-java/: Cargo.toml
apps/generator/crates/emitter-java/src/: lib.rs
apps/generator/crates/emitter-python/: Cargo.toml
apps/generator/crates/emitter-python/src/: lib.rs
apps/generator/crates/emitter-rust/: Cargo.toml
apps/generator/crates/emitter-rust/src/: lib.rs
apps/generator/crates/emitter-typescript/: Cargo.toml
apps/generator/crates/emitter-typescript/src/: lib.rs
apps/generator/crates/forge-bundler/: Cargo.toml
apps/generator/crates/forge-bundler/src/: lib.rs
apps/generator/crates/forge-cli/: Cargo.toml
apps/generator/crates/forge-cli/src/: main.rs
apps/generator/crates/forge-ir/: Cargo.toml
apps/generator/crates/forge-ir/src/: lib.rs
apps/generator/crates/forge-linter/: Cargo.toml
apps/generator/crates/forge-linter/src/: lib.rs
apps/generator/crates/forge-parser/: Cargo.toml
apps/generator/crates/forge-parser/src/: lib.rs
apps/generator/crates/forge-server/: Cargo.toml  build.rs
apps/generator/crates/forge-server/src/: grpc.rs  main.rs
apps/generator/crates/forge-templates/: Cargo.toml
apps/generator/crates/forge-templates/src/: lib.rs
apps/generator/fixtures/: petstore-expanded.yaml
apps/generator/proto/generator/v1/: generator.proto
apps/generator/templates/go/: api.go.tera  client.go.tera  errors.go.tera  go.mod.tera  runtime.go.tera  smoke_test.go.tera
apps/generator/templates/go/models/: model.go.tera
apps/generator/templates/java/: pom.xml.tera
apps/generator/templates/java/src/main/java/: ApiClient.java.tera  ApiException.java.tera  Configuration.java.tera
apps/generator/templates/java/src/main/java/api/: _api.java.tera
apps/generator/templates/java/src/main/java/model/: _model.java.tera
apps/generator/templates/java/src/test/java/: SmokeTest.java.tera
apps/generator/templates/python/: pyproject.toml.tera
apps/generator/templates/python/src/: __init__.py.tera  _runtime.py.tera  client.py.tera  errors.py.tera
apps/generator/templates/python/src/apis/: __init__.py.tera  _api_sync.py.tera
apps/generator/templates/python/src/models/: __init__.py.tera  _pydantic.py.tera
apps/generator/templates/python/tests/: test_smoke.py.tera
apps/generator/templates/rust/: Cargo.toml.tera
apps/generator/templates/rust/src/: client.rs.tera  error.rs.tera  lib.rs.tera
apps/generator/templates/rust/src/apis/: _api.rs.tera  mod.rs.tera
apps/generator/templates/rust/src/models/: _model.rs.tera  mod.rs.tera
apps/generator/templates/rust/tests/: smoke.rs.tera
apps/generator/templates/typescript/: README.md.tera  package.json.tera  tsconfig.json.tera
apps/generator/templates/typescript/src/: client.ts.tera  config.ts.tera  errors.ts.tera  index.ts.tera  runtime.ts.tera
apps/generator/templates/typescript/src/apis/: _api.ts.tera  index.ts.tera
apps/generator/templates/typescript/src/models/: _model.ts.tera  index.ts.tera
apps/generator/templates/typescript/test/: smoke.test.ts.tera
apps/web/: Dockerfile  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/src/app/: layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: CommandPalette.tsx
apps/web/src/contexts/: auth.context.tsx
apps/web/src/lib/: api.ts
apps/web/src/store/: ui.store.ts
apps/web/src/styles/: globals.css
cerbos/: conf.yaml
cerbos/policies/: resource_org.yaml  resource_project.yaml  resource_team.yaml
(+68 files in other folders)
