[workspace]
resolver = "2"
members = [
    "crates/forge-ir",
    "crates/forge-parser",
    "crates/forge-linter",
    "crates/forge-templates",
    "crates/emitter-typescript",
    "crates/emitter-java",
    "crates/emitter-python",
    "crates/emitter-go",
    "crates/emitter-rust",
    "crates/forge-bundler",
    "crates/forge-server",
    "crates/forge-cli",
]

[workspace.package]
authors = ["APIForge"]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Internal
forge-ir          = { path = "crates/forge-ir" }
forge-parser      = { path = "crates/forge-parser" }
forge-linter      = { path = "crates/forge-linter" }
forge-templates   = { path = "crates/forge-templates" }
emitter-typescript = { path = "crates/emitter-typescript" }
emitter-java      = { path = "crates/emitter-java" }
emitter-python    = { path = "crates/emitter-python" }
emitter-go        = { path = "crates/emitter-go" }
emitter-rust      = { path = "crates/emitter-rust" }
forge-bundler     = { path = "crates/forge-bundler" }

# External
anyhow            = "1"
thiserror         = "1"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
serde_yaml        = "0.9"
tera              = "1"
indexmap          = { version = "2", features = ["serde"] }
tokio             = { version = "1", features = ["full"] }
axum              = "0.7"
tonic             = "0.12"
prost             = "0.13"
zip               = "2"
sha2              = "0.10"
hex               = "0.4"
chrono            = { version = "0.4", features = ["serde"] }
clap              = { version = "4", features = ["derive"] }
uuid              = { version = "1", features = ["v4", "serde"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
heck              = "0.5"
tower             = "0.4"
tower-http        = { version = "0.5", features = ["cors", "trace"] }
prometheus        = "0.13"
once_cell         = "1"
