[package]
name = "forge-bundler"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
forge-ir = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
