[package]
name = "forge-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[[bin]]
name = "forge-gen"
path = "src/main.rs"

[dependencies]
forge-ir = { workspace = true }
forge-parser = { workspace = true }
forge-linter = { workspace = true }
emitter-typescript = { workspace = true }
emitter-java = { workspace = true }
emitter-python = { workspace = true }
emitter-go = { workspace = true }
emitter-rust = { workspace = true }
forge-bundler = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
