[package]
name = "forge-parser"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
forge-ir = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
heck = { workspace = true }
