[package]
name = "forge-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[[bin]]
name = "forge-server"
path = "src/main.rs"

[dependencies]
forge-ir = { workspace = true }
forge-parser = { workspace = true }
forge-linter = { workspace = true }
emitter-typescript = { workspace = true }
emitter-java = { workspace = true }
emitter-python = { workspace = true }
emitter-go = { workspace = true }
emitter-rust = { workspace = true }
forge-bundler = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
